--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -4,10 +4,10 @@
 html {scroll-behavior: smooth!important}
 
 /*Headings*/
-.display-1 {font-weight: 900!important} .display-2 {font-weight: 800!important} .display-3 {font-weight: 700!important} .display-4 {font-weight: bold!important} .heading {padding: 20px 10px!important; font-weight: bold!important; text-decoration: underline!important} .heading-medium {font-size: 75px!important} .heading-large {font-size: 100px!important} .heading-small {font-size: 50px!important} .heading-red {color: #f00} .heading-orange {color: #f70} .heading-yellow {color: #ff0} .heading-green {color: #0f0} .heading-cyan {color: #0ff} .heading-blue {color: #00f} .heading-indigo {color: #4B0082} .heading-violet {color: #800080}
+.display-1 {font-weight: 900!important} .display-2 {font-weight: 800!important} .display-3 {font-weight: 700!important} .display-4 {font-weight: bold!important} .heading {padding: 1.25rem 0.625rem!important; font-weight: bold!important; text-decoration: underline!important} .heading-medium {font-size: 4.6875rem!important} .heading-large {font-size: 6.25rem!important} .heading-small {font-size: 3.125rem!important} .heading-red {color: #f00} .heading-orange {color: #f70} .heading-yellow {color: #ff0} .heading-green {color: #0f0} .heading-cyan {color: #0ff} .heading-blue {color: #00f} .heading-indigo {color: #4B0082} .heading-violet {color: #800080}
 
 /*Other Text*/
-mark {background-color: #ff0!important; padding: 0!important} code {display: inline-block!important; background-color: #aaa!important; color: crimson!important; padding-left: 4px!important; padding-right: 4px!important; font-family: Consolas,"courier new"!important; word-break: break-word!important} .code-big {font-size: 17.5px} .text-underline {text-decoration: underline!important} .text-medium {font-size: 20px!important} .text-large {font-size: 25px!important} .text-small {font-size: 15px!important} .text-xs {font-size: 10px!important} .text-xl {font-size: 30px!important} .text-red {color: #f00!important} .text-orange {color: #f70!important} .text-yellow {color: #ff0!important} .text-green {color: #0f0!important} .text-cyan {color: #0ff!important} .text-blue {color: #00f!important} .text-indigo {color: #4B0082!important} .text-violet {color: #800080!important} .text-comment {color: #777!important; font-weight: bold!important}
+mark {background-color: #ff0!important; padding: 0!important} code {display: inline-block!important; background-color: #aaa!important; color: crimson!important; padding-left: 0.25rem!important; padding-right: 0.25rem!important; font-family: Consolas,"courier new"!important; word-break: break-word!important} .code-big {font-size: 1.09375rem} .text-underline {text-decoration: underline!important} .text-medium {font-size: 1.25rem!important} .text-large {font-size: 1.5625rem!important} .text-small {font-size: .9375rem!important} .text-xs {font-size: 0.625rem!important} .text-xl {font-size: 1.875rem!important} .text-red {color: #f00!important} .text-orange {color: #f70!important} .text-yellow {color: #ff0!important} .text-green {color: #0f0!important} .text-cyan {color: #0ff!important} .text-blue {color: #00f!important} .text-indigo {color: #4B0082!important} .text-violet {color: #800080!important} .text-comment {color: #777!important; font-weight: bold!important}
 /*Special*/
 .text-black-50 {color: rgba(0, 0, 0, 0.5)}
 .text-white-50 {color: rgba(255, 255, 255, 0.5)}
@@ -19,22 +19,22 @@ a.link:link {color: blue; text-decoration: none} a.link:visited {color: blue; te
 .clickable {cursor: pointer}
 
 /*Body*/
-body {text-align: center; justify-content: center; margin: auto; line-height: 1.5}
+body {text-align: center; justify-content: center; margin: auto}
 
 /*Buttons*/
-button {cursor: pointer} .btn {box-shadow: 2px 3px 2px #aaa!important}
+button {cursor: pointer} .btn {box-shadow: 0.125rem 0.1875rem 0.125rem #aaa!important}
 
 /*Sections*/
-.section {padding: 100px 10px}
+.section {padding: 6.25rem 0.625rem}
 
 /*Navbar*/         
-.navbar-brand {font-weight: 900!important; font-size: 35px!important} .navbar {font-weight: 700; transition: opacity 0.4s; opacity: 0.85; font-size: 25px; box-shadow: 0 3px 2px #777} .navbar-toggler {outline: none!important; border: none!important; font-size: 30px} .nav-item, .navbar-toggler, .navbar-brand {transition: transform 0.4s; opacity: 1; padding-left: 20px!important; padding-right: 20px!important} .navbar-brand:hover {transform: scale(1.15)} .navbar-toggler:hover {transform: scale(1.15)} .nav-item:hover {transform: scale(1.15)} .navbar:hover {opacity: 1}
+.navbar-brand {font-weight: 900!important; font-size: 2.1875rem!important} .navbar {font-weight: 700; transition: opacity 0.4s; opacity: 0.85; font-size: 1.5625rem; box-shadow: 0 0.1875rem 0.125rem #777} .navbar-toggler {outline: none!important; border: none!important; font-size: 1.875rem} .nav-item, .navbar-toggler, .navbar-brand {transition: transform 0.4s; opacity: 1; padding-left: 1.25rem!important; padding-right: 1.25rem!important} .navbar-brand:hover {transform: scale(1.15)} .navbar-toggler:hover {transform: scale(1.15)} .nav-item:hover {transform: scale(1.15)} .navbar:hover {opacity: 1}
 
 /*Round Elements*/
 .pill {border-radius:10rem!important}
 
 /*Progress Bars*/
-.progress-bar {border-radius: 10rem!important; -webkit-transition: none !important; transition: none !important} .progress {border-radius: 10rem!important} .timer {transition: opacity 0.2s!important; -webkit-transition: opacity 0.4s!important}
+.progress-bar {border-radius: 10rem!important; -webkit-transition: none !important; transition: none !important} .progress {border-radius: 10rem!important}
 
 /*Backgrounds*/
 .bg-rainbow {background: radial-gradient(circle, rgba(128,0,128,1) 0%, rgba(75,0,130,1) 17%, rgba(0,0,255,1) 34%, rgba(0,255,0,1) 51%, rgba(255,255,0,1) 68%, rgba(255,127,0,1) 85%, rgba(255,0,0,1) 100%)!important; background: -webkit-radial-gradient(circle, rgba(128,0,128,1) 0%, rgba(75,0,130,1) 17%, rgba(0,0,255,1) 34%, rgba(0,255,0,1) 51%, rgba(255,255,0,1) 68%, rgba(255,127,0,1) 85%, rgba(255,0,0,1) 100%)!important; background: -moz-radial-gradient(circle, rgba(128,0,128,1) 0%, rgba(75,0,130,1) 17%, rgba(0,0,255,1) 34%, rgba(0,255,0,1) 51%, rgba(255,255,0,1) 68%, rgba(255,127,0,1) 85%, rgba(255,0,0,1) 100%)!important} .bg-muted {background-color: #6c757d!important} .bg-body {background-color: inherit!important} .bg-red {background-color: #f00!important} .bg-orange {background-color: #f70!important} .bg-yellow {background-color: #ff0!important} .bg-green {background-color: #0f0!important} .bg-cyan {background-color: #0ff!important} .bg-blue {background-color: #00f!important} .bg-indigo {background-color: #4b0082!important} .bg-violet {background-color: #800080!important}
@@ -46,16 +46,16 @@ button {cursor: pointer} .btn {box-shadow: 2px 3px 2px #aaa!important}
 .disabled {pointer-events: none!important} .timer-disabled {opacity: 0.9!important}
 
 /*Inputs*/
-.input-group {border-radius: 7.5px!important; display: inline-flex; height: 30px!important; width: 30%!important; margin: auto!important; margin-top: 10px!important; margin-bottom: 10px!important} .input-group-pill {border-radius: 10rem!important; display: inline-flex; height: 30px!important; width: 30%!important; margin: auto!important; margin-top: 10px!important; margin-bottom: 10px!important} .input {border-radius: 7.5px; font-size: 20px; outline: none!important; border: 2px solid #000!important} .input-group .input {width: 80%!important; height: 100%!important; border-radius: 7.5px 0 0 7.5px!important} .input-group-pill .input {width: 80%!important; height: 100%!important; border-radius: 10rem 0 0 10rem!important} .input-toggle-btn {background-color: #000!important; color: #fff!important; border: 2px solid #000!important} .input-group-pill .input-toggle-btn {width: 20%!important; height: 100%!important; border-radius: 0 10rem 10rem 0!important} .input-group .input-toggle-btn {width: 20%!important; height: 100%!important; border-radius: 0 7.5px 7.5px 0!important}
+.input-group {border-radius: 0.3125rem!important; display: inline-flex; height: 1.875rem!important; width: 30%; margin: auto!important; margin-top: 0.625rem!important; margin-bottom: 0.625rem!important} .input-group-pill {border-radius: 10rem!important; display: inline-flex; height: 1.875rem!important; width: 30%; margin: auto!important; margin-top: 0.625rem!important; margin-bottom: 0.625rem!important} .input {border-radius: 0.3125rem; font-size: 0.9rem; outline: none!important; border: 0.125rem solid #000!important; text-indent: 0.625rem} .input-group .input {width: 80%!important; height: 100%!important; border-radius: 0.3125rem 0 0 0.3125rem!important} .input-group-pill .input {width: 80%!important; height: 100%!important; border-radius: 10rem 0 0 10rem!important} .input-toggle-btn {background-color: #000!important; color: #fff!important; border: 0.125rem solid #000!important; outline: none!important} .input-group-pill .input-toggle-btn {width: 20%!important; height: 100%!important; border-radius: 0 10rem 10rem 0!important} .input-group .input-toggle-btn {width: 20%!important; height: 100%!important; border-radius: 0 0.3125rem 0.3125rem 0!important} .input-group-red .input {border: 0.125rem solid #f00!important} .input-group-red .input-toggle-btn {background-color: #f00!important; border: 0.125rem solid #f00!important} .input-group-red {border-color: #f00!important} .input-group-orange .input {border: 0.125rem solid #f70!important} .input-group-orange .input-toggle-btn {background-color: #f70!important; border: 0.125rem solid #f70!important} .input-group-orange {border-color: #f70!important} .input-group-yellow .input {border: 0.125rem solid #ff0!important} .input-group-yellow .input-toggle-btn {background-color: #ff0!important; border: 0.125rem solid #ff0!important} .input-group-yellow {border-color: #ff0!important} .input-group-green .input {border: 0.125rem solid #0f0!important} .input-group-green .input-toggle-btn {background-color: #0f0!important; border: 0.125rem solid #0f0!important} .input-group-green {border-color: #0f0!important} .input-group-cyan .input {border: 0.125rem solid #0ff!important} .input-group-cyan .input-toggle-btn {background-color: #0ff!important; border: 0.125rem solid #0ff!important} .input-group-cyan {border-color: #0ff!important} .input-group-blue .input {border: 0.125rem solid #00f!important} .input-group-blue .input-toggle-btn {background-color: #00f!important; border: 0.125rem solid #00f!important} .input-group-blue {border-color: #00f!important} .input-group-indigo .input {border: 0.125rem solid #4b0082!important} .input-group-indigo .input-toggle-btn {background-color: #4b0082!important; border: 0.125rem solid #4b0082!important} .input-group-indigo {border-color: #4b0082!important} .input-group-violet .input {border: 0.125rem solid #800080!important} .input-group-violet .input-toggle-btn {background-color: #800080!important; border: 0.125rem solid #800080!important} .input-group-violet {border-color: #800080!important}
 
 /*Float Right and Left*/
 .float-right {float: right!important} .float-left {float: left!important}
 
 /*Timer Bars*/
-.timer-label {padding: 5px 30px} .timer-btn {margin: 5px 30px;}
+.timer-label {padding: .3125rem 1.875rem} .timer-btn {margin: .3125rem 1.875rem;} .timer {transition: opacity 0.2s!important; -webkit-transition: opacity 0.4s!important}
 
 /*Scroll Indicator*/
-.scroll-container {width: 100%!important; height: 12.5px!important; background-color: #fff!important; display: block!important; position: fixed!important; bottom: 0!important; z-index: 9999999!important} .scroll-indicator {height: 100%!important; width: 0%}
+.scroll-container {width: 100%!important; height: .78125rem!important; background-color: #fff!important; display: block!important; position: fixed!important; bottom: 0!important; z-index: 9999999!important} .scroll-indicator {height: 100%!important; width: 0%}
 
 /*Containers*/
-.container, .container-fluid {margin-bottom: 20px!important; padding-top: 20px!important; border-radius: 7.5px!important}
+.container, .container-fluid {margin-bottom: 1.25rem!important; padding-top: 1.25rem!important; border-radius: 0.3125rem!important; padding-bottom: 1.25rem!important}
