--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -22,7 +22,7 @@ a.link:link {color: blue; text-decoration: none} a.link:visited {color: blue; te
 body {text-align: center; justify-content: center; margin: auto}
 
 /*Buttons*/
-button {cursor: pointer} .btn {box-shadow: 0.125rem 0.1875rem 0.125rem #aaa!important}
+button {cursor: pointer; box-shadow: 0.125rem 0.1875rem 0.125rem #aaa!important} .btn {box-shadow: 0.125rem 0.1875rem 0.125rem #aaa!important}
 
 /*Sections*/
 .section {padding: 6.25rem 0.625rem}
