--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -58,4 +58,4 @@ button {cursor: pointer; box-shadow: 0.125rem 0.1875rem 0.125rem #aaa!important}
 .scroll-container {width: 100%!important; height: .78125rem!important; background-color: #fff!important; display: block!important; position: fixed!important; bottom: 0!important; z-index: 9999999!important} .scroll-indicator {height: 100%!important; width: 0%}
 
 /*Containers*/
-.container, .container-fluid {margin-bottom: 1.25rem!important; padding-top: 1.25rem!important; border-radius: 0.3125rem!important; padding-bottom: 1.25rem!important; height: 100%!important; background-color: #888!important} .theme-dark .container, .theme-dark .container-fluid {background-color: #666!important}
+.container, .container-fluid {margin-bottom: 1.25rem!important; padding-top: 1.25rem!important; border-radius: 0.3125rem!important; padding-bottom: 1.25rem!important; height: 100%!important; background-color: #ddd!important} .theme-dark .container, .theme-dark .container-fluid {background-color: #222!important}
