--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -28,7 +28,7 @@ button {cursor: pointer; box-shadow: 0.125rem 0.1875rem 0.125rem #aaa!important}
 .section {padding: 6.25rem 0.625rem}
 
 /*Navbar*/         
-.navbar-brand {font-weight: 900!important; font-size: 2.1875rem!important} .navbar {font-weight: 700; transition: opacity 0.4s; opacity: 0.85; font-size: 1.5625rem!important; box-shadow: 0 0.1875rem 0.125rem #777} .navbar-toggler {outline: none!important; border: none!important; font-size: 1.875rem} .nav-item, .navbar-toggler, .navbar-brand {transition: transform 0.4s; opacity: 1; padding-left: 1.25rem!important; padding-right: 1.25rem!important} .navbar-brand:hover {transform: scale(1.15)} .navbar-toggler:hover {transform: scale(1.15)} .nav-item:hover {transform: scale(1.15)} .navbar:hover {opacity: 1}
+.navbar-brand {font-weight: 900!important; font-size: 2.1875rem!important} .navbar {font-weight: 700; transition: opacity 0.4s; opacity: 0.85; font-size: 1.5625rem!important; box-shadow: 0 0.1875rem 0.125rem #777!important} .navbar-toggler {outline: none!important; border: none!important; font-size: 1.875rem!important} .nav-item, .navbar-toggler, .navbar-brand {transition: transform 0.4s; opacity: 1; padding-left: 1.25rem!important; padding-right: 1.25rem!important} .navbar-brand:hover {transform: scale(1.15)} .navbar-toggler:hover {transform: scale(1.15)} .nav-item:hover {transform: scale(1.15)} .navbar:hover {opacity: 1}
 
 /*Round Elements*/
 .pill {border-radius:10rem!important}
