--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -25,7 +25,7 @@ body {text-align: center; justify-content: center; margin: auto}
 button {cursor: pointer; box-shadow: 0.125rem 0.1875rem 0.125rem #aaa!important} .btn {box-shadow: 0.125rem 0.1875rem 0.125rem #aaa!important}
 
 /*Sections*/
-.section {margin: 6.25rem 0.625rem!important; border-radius: 0.3125rem!important; padding-left: 0.9375rem!important; padding-right: 0.9375rem!important}
+.section {margin: 6.25rem 0.625rem!important; border-radius: 0.3125rem!important; padding: 1.25rem 0.9375rem!important}
 
 /*Navbar*/         
 .navbar-brand {font-weight: 900!important; font-size: 2.1875rem!important} .navbar {font-weight: 700; transition: opacity 0.4s; opacity: 0.85; font-size: 1.5625rem!important; box-shadow: 0 0.1875rem 0.125rem #777!important} .navbar-toggler {outline: none!important; border: none!important; font-size: 1.875rem!important} .nav-item, .navbar-toggler, .navbar-brand {transition: transform 0.4s; opacity: 1; padding-left: 1.25rem!important; padding-right: 1.25rem!important} .navbar-brand:hover {transform: scale(1.15)} .navbar-toggler:hover {transform: scale(1.15)} .nav-item:hover {transform: scale(1.15)} .navbar:hover {opacity: 1} .collapse {max-height: 35%!important; overflow-y: scroll!important; overflow-y: hidden!important}
