--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -62,3 +62,7 @@ body {text-align: center; justify-content: center; margin: auto}
 
 /*HTML Elements*/
 ul.list {font-size: 0.75em!important} ul.list ul.list {font-size: 0.75em!important}
+
+/*Thumbnails*/
+
+.thumbnail, .img-thumbnail {padding: .25rem; background-color: transparent!important}
