--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -62,3 +62,6 @@ body {text-align: center; justify-content: center; margin: auto}
 
 /*HTML Elements*/
 ul.list {font-size: 0.75em!important} ul.list ul.list {font-size: 0.75em!important}
+
+/*Modals*/
+.modal {box-shadow: 5px 5px 5px #000} .theme-dark .modal {box-shadow: 5px 5px 5px #fff!important; color: #fff!important; background-color: #000!important}
