--- a/bs4-helper-rotations.css
+++ b/bs4-helper-rotations.css
@@ -1,4 +1,4 @@
-/*Copyright 2021 Bhogi7589*/
+/*Copyright 2021 Karthikeya*/
 /*Rotations*/
 
 .rotate-1 {transform: rotate(1deg)!important; -webkit-transform: rotate(1deg)!important; -moz-transform: rotate(1deg)!important; -ms-transform: rotate(1deg)!important; -o-transform: rotate(1deg)!important; padding: 200px!important}
