--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -1,4 +1,4 @@
-/*Copyright 2021 Bhogi7589*/
+/*Copyright 2021 Karthikeya*/
 
 /*Scrolling*/
 html {scroll-behavior: smooth!important} ::-webkit-scrollbar {width: 0.625rem} ::-webkit-scrollbar-track {box-shadow: inset 0 0 .3125rem grey; border-radius: 10rem} ::-webkit-scrollbar-thumb {background: #888; border-radius: 10rem} ::-webkit-scrollbar-thumb:hover {background: #555}
