--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -61,7 +61,7 @@ body {text-align: center; justify-content: center; margin: auto}
 .container, .container-fluid {margin-bottom: 1.25rem!important; padding-top: 1.25rem!important; border-radius: 0.3125rem!important; padding-bottom: 1.25rem!important; height: 100%!important; background-color: #ddd!important} .theme-dark .container, .theme-dark .container-fluid {background-color: #222!important}
 
 /*HTML Elements*/
-ul.list {font-size: 0.75em!important} ul.list ul.list {font-size: 0.75em!important}
+ul.list {font-size: 0.75em!important} ul.list ul.list {font-size: 0.75em!important} .jumbotron {color: #000!important}
 
 /*Modals*/
 .modal-content {box-shadow: 0 0 5px 3px #000; border: 2px solid #000!important} .theme-dark .modal-content {box-shadow: 0 0 5px 3px #fff!important; color: #fff!important; background-color: #000!important; border: 2px solid #fff!important} .theme-dark .close {color: #fff!important}
