--- a/bs4-helper-bg-colors.css
+++ b/bs4-helper-bg-colors.css
@@ -1,4 +1,4 @@
-/*Copyright 2021 Karthikeya*/
+/*Copyright 2021 Karthikeya Kaza*/
 /*More background-colors*/
 
 .bg-white {background-color: #fff!important}
