--- a/bs4-helper-bg-colors.css
+++ b/bs4-helper-bg-colors.css
@@ -1,4 +1,6 @@
 /*Copyright 2021 Karthikeya Kaza*/
+/*A Framework for Bootstrap 4 Additional Components and Styles - BS4 Helper.*/
+
 /*More background-colors*/
 
 .bg-white {background-color: #fff!important}
