--- a/bs4-helper-colors.css
+++ b/bs4-helper-colors.css
@@ -1,4 +1,6 @@
 /*Copyright 2021 Karthikeya Kaza*/
+/*A Framework for Bootstrap 4 Additional Components and Styles - BS4 Helper.*/
+
 /*More colors*/
 
 .color-white {color: #fff!important}
