--- a/bs4-helper-bg-colors.css
+++ b/bs4-helper-bg-colors.css
@@ -3,6 +3,8 @@
 
 /*More background-colors*/
 
+.bg-transparent {background-color: rgba(0, 0, 0, 0)!important}
+
 .bg-white {background-color: #fff!important}
 .bg-gray-50 {background-color: #fbfbfb!important}
 .bg-gray-100 {background-color: #f5f5f5!important}
