--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -54,7 +54,7 @@ body {text-align: center; justify-content: center; margin: auto}
 .timer-label {padding: .3125rem 1.875rem} .timer-btn {margin: .3125rem 1.875rem;} .timer {transition: opacity 0.2s!important; -webkit-transition: opacity 0.4s!important} .timer-disabled {opacity: 0.75!important}
 
 /*Scroll Indicator*/
-.scroll-container {width: 100%!important; height: .78125rem!important; background-color: #fff!important; display: block!important; position: fixed!important; bottom: 0!important; z-index: 9999999!important} .scroll-indicator {height: 100%!important; width: 0%}
+.scroll-container {width: 100vw!important; height: .78125rem!important; background-color: #fff!important; display: block!important; position: fixed!important; bottom: 0!important; z-index: 9999999!important} .scroll-indicator {height: 100%!important; width: 0%}
 
 /*Containers*/
 .container, .container-fluid {margin-bottom: 1.25rem!important; padding-top: 1.25rem!important; border-radius: 0.3125rem!important; padding-bottom: 1.25rem!important; height: 100%!important; background-color: #ddd!important} .theme-dark .container, .theme-dark .container-fluid {background-color: #222!important}
