--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -24,7 +24,7 @@ a.link:link {color: blue; text-decoration: none} a.link:visited {color: blue; te
 body {text-align: center; justify-content: center; margin: auto}
 
 /*Buttons*/
-.btn {cursor: pointer!important; box-shadow: 0 0 0.125rem 0.125rem #777} .close {box-shadow: none!important} .outline-none:active {outline: none!important} .input-group-prepend .btn, .input-group-append .btn, .no-box-shadow {box-shadow: none!important}
+.btn {cursor: pointer!important; box-shadow: 0 0 0.125rem 0.125rem #777} .close {box-shadow: none!important} .outline-none:active {outline: none!important}
 
 /*Sections*/
 .section {margin: 6.1rem 0!important; padding: 3rem 0.625rem!important}
@@ -68,4 +68,4 @@ ul.list {font-size: 0.75em!important} ul.list ul.list {font-size: 0.75em!importa
 .fixed-left {position: fixed!important; left: 0!important; z-index: 9999999} .fixed-right {position: fixed!important; right: 0!important; z-index: 9999999} .fixed-top-left {position: fixed!important; top: 0!important; left: 0!important; z-index: 9999999} .fixed-bottom-left {position: fixed!important; bottom: 0!important; left: 0!important; z-index: 9999999} .fixed-top-right {position: fixed!important; top: 0!important; right: 0!important; z-index: 9999999} .fixed-bottom-right {position: fixed!important; bottom: 0!important; right: 0!important; z-index: 9999999}
 
 /*Modals*/
-.modal-content {box-shadow: 0 0 5px 3px #000; border: 2px solid #000!important} .theme-dark .modal-content {box-shadow: 0 0 5px 3px #fff!important; color: #fff!important; background-color: #000!important; border: 2px solid #fff!important} .theme-dark .close {color: #fff!important} 
+.modal-content {box-shadow: 0 0 5px 3px #000; border: 2px solid #000!important} .theme-dark .modal-content {box-shadow: 0 0 5px 3px #fff!important; color: #fff!important; background-color: #000!important; border: 2px solid #fff!important} .theme-dark .close {color: #fff!important}
