--- a/bs4-helper.css
+++ b/bs4-helper.css
@@ -71,4 +71,4 @@ ul.list {font-size: 0.75em!important} ul.list ul.list {font-size: 0.75em!importa
 .modal-content {box-shadow: 0 0 5px 3px #000; border: 2px solid #000!important} .theme-dark .modal-content {box-shadow: 0 0 5px 3px #fff!important; color: #fff!important; background-color: #000!important; border: 2px solid #fff!important} .theme-dark .close {color: #fff!important}
 
 /*Accordion*/
-.accordion .fa.toggle-icon {margin-right: 0.5rem!important}
+.accordion .fa.toggle-icon {position: absolute} .left {left: 0; margin-left: 1rem} .right {right:0; margin-right: 1rem!important}
